--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="col-md-6 offset-md-3">
+<div class="container mt-4">
     {% if user.is_authenticated %}
     <h1 class="text-center">👋 Welcome 👋</h1>
     {% if records %}
@@ -69,35 +69,43 @@
 
                         <!-- Números de página -->
                         {% for num in records.paginator.page_range %}
-                        {% if num >= records.number|add:'-2' and num <= records.number|add:'2' %} {% if
-                            records.number==num %} <li class="page-item active">
-                            <span class="page-link">{{ num }}</span>
-                            </li>
-                            {% else %}
-                            <li class="page-item">
-                                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                            </li>
+                            {% if num >= records.number|add:'-2' and num <= records.number|add:'2' %}
+                                {% if records.number == num %}
+                                    <li class="page-item active">
+                                        <span class="page-link">{{ num }}</span>
+                                    </li>
+                                {% else %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                    </li>
                             {% endif %}
-                            {% endfor %}
-
-                            <!-- Botón "Siguiente" y "Última página" -->
-                            {% if records.has_next %}
-                            <li class="page-item">
-                                <a class="page-link bg-dark text-white" href="?page={{ records.next_page_number }}"
-                                    title="Siguiente">&rsaquo;</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link bg-dark text-white" href="?page={{ records.paginator.num_pages }}"
-                                    title="Última página">&raquo;</a>
-                            </li>
-                            {% else %}
-                            <li class="page-item disabled">
-                                <span class="page-link bg-secondary text-white">&rsaquo;</span>
-                            </li>
-                            <li class="page-item disabled">
-                                <span class="page-link bg-secondary text-white">&raquo;</span>
-                            </li>
-                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    <!-- Botón "Siguiente" y "Última página" -->
+            {% if records.has_next %}
+            <li class="page-item">
+                <a
+                class="page-link bg-dark text-white"
+                href="?page={{ records.next_page_number }}"
+                title="Siguiente"
+                >&rsaquo;</a>
+            </li>
+            <li class="page-item">
+                <a
+                class="page-link bg-dark text-white"
+                href="?page={{ records.paginator.num_pages }}"
+                title="Última página"
+                >&raquo;</a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+                <span class="page-link bg-secondary text-white">&rsaquo;</span>
+            </li>
+            <li class="page-item disabled">
+                <span class="page-link bg-secondary text-white">&raquo;</span>
+            </li>
+            {% endif %}
+                        
 
                     </ul>
 
